// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/go getDigest returns digest 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/text?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/golang/text/commits?per_page=1",
  },
]
`;

exports[`datasource/go getDigest returns null for no go-source tag 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/y/text?go-get=1",
  },
]
`;

exports[`datasource/go getDigest returns null for wrong name 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/y/text?go-get=1",
  },
]
`;

exports[`datasource/go getReleases falls back to old behaviour 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go getReleases falls back to old behaviour 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go getReleases processes real data 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://github.com/golang/text",
}
`;

exports[`datasource/go getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/text?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/golang/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/golang/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go getReleases returns null for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/foo/something?go-get=1",
  },
]
`;

exports[`datasource/go getReleases returns null for empty result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/foo/something?go-get=1",
  },
]
`;

exports[`datasource/go getReleases returns null for go-import prefix mismatch 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/example/module?go-get=1",
  },
]
`;

exports[`datasource/go getReleases returns null for unknown error 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/foo/something?go-get=1",
  },
]
`;

exports[`datasource/go getReleases skips unsupported platform 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/text?go-get=1",
  },
]
`;

exports[`datasource/go getReleases skips wrong package 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/sys?go-get=1",
  },
]
`;

exports[`datasource/go getReleases support bitbucket 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://bitbucket.org/golang/text",
}
`;

exports[`datasource/go getReleases support bitbucket 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/golang/text/refs/tags",
  },
]
`;

exports[`datasource/go getReleases support ghe 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://git.enterprise.com/example/module",
}
`;

exports[`datasource/go getReleases support ghe 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/example/module?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/api/v3/repos/example/module/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/api/v3/repos/example/module/releases?per_page=100",
  },
]
`;

exports[`datasource/go getReleases support gitlab 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://gitlab.com/golang/text",
}
`;

exports[`datasource/go getReleases support gitlab 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/text?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/golang%2Ftext/repository/tags?per_page=100",
  },
]
`;

exports[`datasource/go getReleases unknown datasource returns null 1`] = `null`;

exports[`datasource/go getReleases unknown datasource returns null 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "some.unknown.website",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://some.unknown.website/example/module?go-get=1",
  },
]
`;

exports[`datasource/go getReleases works for known servers 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/go-x/x/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/go-x/x/releases?per_page=100",
  },
]
`;

exports[`datasource/go getReleases works for nested modules on github 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go getReleases works for nested modules on github 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;
